# memory-distill

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  opencode.json  pyproject.toml
docs/: recipe-stack-expansion-summary.md
docs/bugs/: bug-accepted-recipe-trailing-blank.md  bug-agent-skill-wrapper-lxml-version-mismatch.md  bug-extract-section-count-expectation.md  bug-import-source-uses-default-nextjs-stack.md  bug-invalid-extraction-selector-crashes.md  bug-parse-recipe-frontmatter-splits-on-dashes-in-content.md  bug-publish-keeps-stale-sibling.md  bug-publish-leaves-proposed-candidate.md  bug-react-error-next-data-message-missing.md  bug-skill-packager-stale-recipe-expectation.md  bug-snapshot-review-navigation-noise.md
docs/design/: build-recipe-unified-pipeline.md  debug-recipe-importer-mvp.md  private-repo-knowledge-distillation.md
docs/knowledge/: INDEX.md  README.md  repository-maintenance.md
docs/research/: android-harmonyos-stack-research.md  ios-stack-research.md  stack-url-research.md
prompts/: debug_recipe_evidence.md
recipe-kb/: index.json  manifest.yml
schemas/: build-recipe.schema.json  debug-recipe.schema.json  evidence-candidates.schema.json  review.schema.json  source.schema.json
scripts/: build_agent_skill.py
tests/: conftest.py  test_build_agent_skill.py  test_build_templates.py  test_cli.py  test_extract.py  test_generate.py  test_manifest.py  test_models_schema.py  test_normalize_render.py  test_publish_index_search.py  test_refresh.py  test_review.py  test_sources_fetch.py  test_storage.py  test_vertical_slice.py
(+285 files in other folders)
