[project]
name = "recipe-importer"
version = "0.1.0"
description = "CLI-first importer for reviewed debug recipes"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
  "httpx>=0.27",
  "lxml>=5.0",
  "markdown-it-py>=3.0",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
recipe-importer = "recipe_importer.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
